[tool.poetry]
name = "ical-dataweek-de"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <natanael.arndt@eccenca.com>"]
readme = "README.md"
packages = [{include = "ical"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mkdocs = "^1.4.2"
mkdocs-gen-files = "^0.4.0"
rdflib = "^6.3.2"
icalendar = "^5.0.4"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
